added pagination, book covers, admin

--- a/app/views/book_histories/index.html.erb
+++ b/app/views/book_histories/index.html.erb
@@ -1,5 +1,5 @@
     <p id="notice"><%= notice %></p>
-    <% if((@data.split("&")[1].split("=")[1].to_i == current_user.id) || @current_admin) %>
+    <% if((@data.split("&")[1].split("=")[1].to_i == current_user.id) || current_user.admin?) %>
 
     <%if !@data.split("&")[1].split("=")[1].nil?       #user_id is not nil%>
     <%if @data.split("&")[1].split("=")[1].to_i == current_user.id%>
