--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,7 @@
       <%end%>
     </table>
 
-    <%if @current_admin %>
+    <%if current_user.admin? %>
     <%= link_to 'Edit', edit_book_path(@book), :class => "btn btn-danger", :style => "color: #ffffff" %> | 
     <%end%>
     <%= link_to 'Back', books_path, :class => "btn btn-warning", :style => "color: #ffffff" %>
