--- a/app/views/book_histories/index.html.erb
+++ b/app/views/book_histories/index.html.erb
@@ -1,14 +1,14 @@
     <p id="notice"><%= notice %></p>
-    <% if((@data.split("&")[1].split("=")[1].to_i == current_user.id) || current_user.admin?) %>
+    <% if((@user_id.to_i == current_user.id) || current_user.admin?) %>
 
-    <%if !@data.split("&")[1].split("=")[1].nil?       #user_id is not nil%>
-    <%if @data.split("&")[1].split("=")[1].to_i == current_user.id%>
+    <%if !@user_id.nil?       #user_id is not nil%>
+    <%if @user_id.to_i == current_user.id%>
     <h1>Your checkout history</h1>
     <%else %>
-    <h1><i style='color:#428bca'><%=User.find(@data.split("&")[1].split("=")[1].to_i).name%>'s</i> checkout history</h1>
+    <h1><i style='color:#428bca'><%=User.find(@user_id.to_i).name%>'s</i> checkout history</h1>
     <%end%>
     <%else%>
-    <h1>Check out history of <i style='color:#428bca'><%=Book.find(@data.split("&")[0].split("=")[1].to_i).title%></i></h1>
+    <h1>Check out history of <i style='color:#428bca'><%=Book.find(@book_id.to_i).title%></i></h1>
     <%end%>
 
     <table class='table'>
@@ -17,7 +17,7 @@
           <th>Book</th>
           <th>Check out date</th>
           <th>Check in date</th>
-          <%if @data.split("&")[1].split("=")[1].nil? %>
+          <%if @book_id.nil? %>
           <th>Checked out by</th>
           <%end%>
           <th colspan="3"></th>
@@ -29,26 +29,26 @@
         <% @book = Book.find(book_history.book_id) %>
         <% @user = User.find(book_history.user_id) %>
         <% #History of a user %>
-        <%  if @data.split("&")[0].split("=")[1].nil? %>
-        <% if book_history.user_id.to_s == @data.split("&")[1].split("=")[1]%>
+        <%  if @book_id.nil? %>
+        <% if book_history.user_id.to_s == @user_id %>
         <tr>
           <td><%= @book.title %></td>
-          <td><%= book_history.chk_out_dt.strftime("%b/%d/%Y") %></td>
+          <td><%= book_history.chk_out_dt.strftime("%b %d, %Y") %></td>
           <%if !book_history.chk_in_date.nil?%>
-          <td><%=book_history.chk_in_date.strftime("%b/%d/%Y")%></td>
+          <td><%=book_history.chk_in_date.strftime("%b %d, %Y")%></td>
           <%else%>
           <td><%=book_history.chk_in_date%></td>
           <%end%>
           <%end%>
           <% end %> <%#End of history of a book%>
           <% #History of a book %>
-          <%  if @data.split("&")[1].split("=")[1].nil? %>
-          <% if book_history.book_id.to_s == @data.split("&")[0].split("=")[1]%>
+          <%  if @user_id.nil? %>
+          <% if book_history.book_id.to_s == @book_id %>
           <tr>
             <td><%= @book.title %></td>
-            <td><%= book_history.chk_out_dt.strftime("%b/%d/%Y") %></td>
+            <td><%= book_history.chk_out_dt.strftime("%b %d, %Y") %></td>
             <%if !book_history.chk_in_date.nil?%>
-            <td><%=book_history.chk_in_date.strftime("%b/%d/%Y")%></td>
+            <td><%=book_history.chk_in_date.strftime("%b %d, %Y")%></td>
             <%else%>
             <td><%=book_history.chk_in_date%></td>
             <%end%>
