--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -39,7 +39,7 @@
           </div>
           <div class="col-sm-12">
             <%if current_user.admin? %>
-              <%=link_to 'View Checkout History', check_user_history_path(:data => {:user_id => nil, :book_id => book.id}), :class => "btn btn-success", :style => "color: #ffffff"%>
+              <%=link_to 'View Checkout History', check_user_history_path(user_id: current_user.id, book_id: nil), :class => "btn btn-success", :style => "color: #ffffff"%>
               <%= link_to 'Edit', edit_book_path(book), :class => "btn btn-warning", :style => "color: #ffffff" %>
               <%if !book.is_borrowed %>
                 <%= link_to 'Delete', book, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger", :style => "color: #ffffff" %>
