--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <% if !current_user.admin %>
             <%= nav_link "All Books", books_path%>            
           <% end %>
-          <%= nav_link "My checkout history", check_user_history_path(:data => {:user_id => current_user.id, :book_id => nil})%>
+          <%= nav_link "My checkout history", check_user_history_path(user_id: current_user.id, book_id: nil)%>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <div style="margin: 15px 0px 0px 20px; float: left">
@@ -32,28 +32,33 @@
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Users', users_path, class: 'nav-link' %></li>
               <li><%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %></li>
               <li class="divider"></li>
               <li><%= link_to '<i class="glyphicon glyphicon-off"></i> Log out'.html_safe, destroy_user_session_path, method: :delete, :style => "float: left" %></li>
             </ul>
           </li>
         </ul>
-      <% end %>
+        <% else %>
+          <ul class="nav navbar-nav navbar-left">
+            <%= link_to image_tag("logo.png", width: 45), home_path, style: 'color: #fff; float: left'%>
+            <%= nav_link "Search Books", new_search_path%>
+            <%= nav_link "All Books", books_path%>            
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class='nav-item'><%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %></li>
+            <li class='nav-item'><%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %></li>
+          </ul>
+        <% end %>
       </nav>
     </div>
   </header>
   <br/><br/>
-  <% flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %>"><%= message %></div>
-  <% end %>
+  <%= custom_bootstrap_flash %>
   <div class="container">
     <%= yield %>
   </div>
   <br/>
   <br/>
-  <%= debug(params) if Rails.env.development? %>
-  <%= debug(session[:user_id]) if Rails.env.development? %>
 
 </body>
 </html>
