--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -38,7 +38,7 @@
             <%end%>
           </div>
           <div class="col-sm-12">
-            <%if current_user.admin? %>
+            <%if user_signed_in? && current_user.admin? %>
               <%=link_to 'View Checkout History', check_user_history_path(user_id: current_user.id, book_id: nil), :class => "btn btn-success", :style => "color: #ffffff"%>
               <%= link_to 'Edit', edit_book_path(book), :class => "btn btn-warning", :style => "color: #ffffff" %>
               <%if !book.is_borrowed %>
@@ -54,6 +54,6 @@
   <%= will_paginate @books, :style => "font-size: 16px;"%>
   <br>
   <br><br>
-  <%if current_user.admin? %>
+  <%if user_signed_in? && current_user.admin? %>
   <%= link_to 'Add Book', new_book_path, :class => "btn btn-success btn-lg", :style => "color: #ffffff" %>
   <% end %>
