--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 					<th>Author</th>
 					<th>Isbn</th>
 					<th>Status</th>
-					<%if current_user.admin? %>
+					<%if user_signed_in? && current_user.admin? %>
 					<th>Checked out by </th>
 					<%end%>
 					<th colspan="3"></th>
@@ -38,7 +38,7 @@
 					<%else%>
 					<td></td>
 					<%end%>
-					<%if current_user.admin? %>
+					<%if user_signed_in? && current_user.admin? %>
 						<td><%=link_to 'View Checkout History', check_user_history_path(user_id: current_user.id, book_id: nil), :class => "btn btn-success", :style => "color: #ffffff"%></td>
 					<td><%= link_to 'Edit', edit_book_path(book), :class => "btn btn-warning", :style => "color: #ffffff" %></td>
 					<%if !book.is_borrowed %>
