--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -12,7 +12,7 @@
               <th>Author</th>
               <th>Isbn</th>
               <th>Status</th>
-              <%if current_user.admin? %>
+              <%if user_signed_in? && current_user.admin? %>
               <th>Checked out by </th>
               <%end%>
               <th colspan="3"></th>
@@ -38,7 +38,7 @@
               <td></td>
               <%end%>
               <td><%= link_to 'Show', book, :class => "btn btn-primary", :style => "color: #ffffff" %></td>
-              <%if current_user.admin? %>
+              <%if user_signed_in? && current_user.admin? %>
               <td><%= link_to 'Edit', edit_book_path(book), :class => "btn btn-warning", :style => "color: #ffffff" %></td>
               <%if !book.is_borrowed %>
           <td><%= link_to 'Delete', book, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger", :style => "color: #ffffff" %></td>
