restyle book details page

--- a/app/views/books/_form_edit.html.erb
+++ b/app/views/books/_form_edit.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :publisher %><br>
-    <%= f.text_field :publisher %>
+    <%= f.text_field :publisher, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :author %><br>
-    <%= f.text_field :author %>
+    <%= f.text_field :author,class: 'form-control' %>
   </div>
 
   <div class="actions">
