--- a/app/views/book_histories/index.html.erb
+++ b/app/views/book_histories/index.html.erb
@@ -18,7 +18,7 @@
           <th>Check out date</th>
           <th>Check in date</th>
           <%if @book_id.nil? %>
-          <th>Checked out by</th>
+            <th>Checked out by</th>
           <%end%>
           <th colspan="3"></th>
         </tr>
@@ -32,7 +32,7 @@
         <%  if @book_id.nil? %>
         <% if book_history.user_id.to_s == @user_id %>
         <tr>
-          <td><%= @book.title %></td>
+          <td><%= link_to @book.title, @book, :style => "color: #428bca; background: transparent" %></td>
           <td><%= book_history.chk_out_dt.strftime("%b %d, %Y") %></td>
           <%if !book_history.chk_in_date.nil?%>
           <td><%=book_history.chk_in_date.strftime("%b %d, %Y")%></td>
