--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,18 +16,20 @@
               <span class="label label-success">Available</span>
             <%end%>
             <%if book.is_borrowed %>
-
-              <% if user_signed_in? && book.user_id == current_user.id %>
-
-                <%= link_to 'Return', return_book_path(:id => book.id), :class => "btn btn-warning", :style => "color: #ffffff"%>
-              <%else%>
-                <% if !book.is_requested %>
-                  <%= link_to 'Request Notification', request_book_path(:id => book.id), :class => "btn btn-warning", :style => "color: #ffffff"%>
+              <% if user_signed_in?%>
+                <% if book.user_id == current_user.id %>
+                  <%= link_to 'Return', return_book_path(:id => book.id), :class => "btn btn-warning", :style => "color: #ffffff"%>
                 <%else%>
-                  <% if book.is_requested && (book.requested_by == current_user.id) %>          
-                    <%= link_to 'Cancel Notification', cancel_request_book_path(:id => book.id), :class => "btn btn-warning", :style => "color: #ffffff"%>
+                  <% if !book.is_requested %>
+                    <%= link_to 'Request Notification', request_book_path(:id => book.id), :class => "btn btn-warning", :style => "color: #ffffff"%>
+                  <%else%>
+                    <% if book.is_requested && (user_signed_in? && book.requested_by == current_user.id) %>          
+                      <%= link_to 'Cancel Notification', cancel_request_book_path(:id => book.id), :class => "btn btn-warning", :style => "color: #ffffff"%>
+                    <%end%>
                   <%end%>
                 <%end%>
+              <%else%>
+                <%= link_to 'Request Notification', request_book_path(:id => book.id), :class => "btn btn-warning", :style => "color: #ffffff"%>
               <%end%>
             <%else%>
               <%=link_to 'Check out', borrow_book_path(:id => book.id), :class => "btn btn-success", :style => "color: #ffffff"%>
