--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %></li>
               <li class="divider"></li>
-              <li><%= link_to 'Log out'.html_safe, destroy_user_session_path, method: :delete, :style => "float: left" %></li>
+              <li><%= link_to 'Log out'.html_safe, destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
         </ul>
