add manage user use case (exclude view checkout history)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <h3>User</h3>
 <p>Name: <%= @user.name if @user.name %></p>
 <p>Email: <%= @user.email if @user.email %></p>
+<p>Address: <%= @user.address if @user.address %></p>
+<p>Phone: <%= @user.phone if @user.phone %></p>
+<p>Admin: <%= @user.admin? %></p>
