--- a/app/views/book_histories/index.html.erb
+++ b/app/views/book_histories/index.html.erb
@@ -1,69 +1,67 @@
-    <p id="notice"><%= notice %></p>
-    <% if((@user_id.to_i == current_user.id) || current_user.admin?) %>
-
-    <%if !@user_id.nil?       #user_id is not nil%>
+<p id="notice"><%= notice %></p>
+<% if((@user_id.to_i == current_user.id) || current_user.admin?) %>
+  <%if !@user_id.nil? %>
     <%if @user_id.to_i == current_user.id%>
-    <h1>Your checkout history</h1>
+      <h1>Your checkout history</h1>
     <%else %>
-    <h1><i style='color:#428bca'><%=User.find(@user_id.to_i).name%>'s</i> checkout history</h1>
+      <h1><i style='color:#428bca'><%=User.find(@user_id.to_i).name%>'s</i> checkout history</h1>
     <%end%>
-    <%else%>
+  <%else%>
     <h1>Check out history of <i style='color:#428bca'><%=Book.find(@book_id.to_i).title%></i></h1>
-    <%end%>
+  <%end%>
+  <table class='table'>
+    <thead>
+      <tr>
+        <th>Book</th>
+        <th>Check out date</th>
+        <th>Check in date</th>
+        <%if !@book_id.nil? %>
+          <th>Checked out by</th>
+        <%end%>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
 
-    <table class='table'>
-      <thead>
-        <tr>
-          <th>Book</th>
-          <th>Check out date</th>
-          <th>Check in date</th>
-          <%if @book_id.nil? %>
-            <th>Checked out by</th>
-          <%end%>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @book_histories.each do |book_history| %>
-        <% @book = Book.find(book_history.book_id) %>
-        <% @user = User.find(book_history.user_id) %>
-        <% #History of a user %>
-        <%  if @book_id.nil? %>
-        <% if book_history.user_id.to_s == @user_id %>
-        <tr>
-          <td><%= link_to @book.title, @book, :style => "color: #428bca; background: transparent" %></td>
-          <td><%= book_history.chk_out_dt.strftime("%b %d, %Y") %></td>
-          <%if !book_history.chk_in_date.nil?%>
-          <td><%=book_history.chk_in_date.strftime("%b %d, %Y")%></td>
-          <%else%>
-          <td><%=book_history.chk_in_date%></td>
-          <%end%>
-          <%end%>
-          <% end %> <%#End of history of a book%>
-          <% #History of a book %>
-          <%  if @user_id.nil? %>
-          <% if book_history.book_id.to_s == @book_id %>
-          <tr>
-            <td><%= @book.title %></td>
-            <td><%= book_history.chk_out_dt.strftime("%b %d, %Y") %></td>
-            <%if !book_history.chk_in_date.nil?%>
-            <td><%=book_history.chk_in_date.strftime("%b %d, %Y")%></td>
-            <%else%>
-            <td><%=book_history.chk_in_date%></td>
-            <%end%>
-            <td><%= @user.name %>&nbsp(&nbsp<%=@user.email%>&nbsp)</td>
-            <%end%>
-            <% end %>
-            <%#End of history of a book%>
-            <% end %>
-          </tbody>
-        </table>
-        <br>
+    <tbody>
+      <% @book_histories.each do |book_history| %>
+      <% @book = Book.find(book_history.book_id) %>
+      <% @user = User.find(book_history.user_id) %>
+      <% #History of a user %>
+      <%  if @book_id.nil? %>
+      <% if book_history.user_id.to_s == @user_id %>
+      <tr>
+        <td><%= link_to @book.title, @book, :style => "color: #428bca; background: transparent" %></td>
+        <td><%= book_history.chk_out_dt.strftime("%b %d, %Y") %></td>
+        <%if !book_history.chk_in_date.nil?%>
+        <td><%=book_history.chk_in_date.strftime("%b %d, %Y")%></td>
         <%else%>
-        <blockquote>
-          <p class="text-danger">You are not authorized to view this page!</p>
-        </blockquote>
+        <td><%=book_history.chk_in_date%></td>
+        <%end%>
+        <%end%>
+        <% end %> <%#End of history of a book%>
+        <% #History of a book %>
+        <%  if @user_id.nil? %>
+        <% if book_history.book_id.to_s == @book_id %>
+      <tr>
+        <td><%= @book.title %></td>
+        <td><%= book_history.chk_out_dt.strftime("%b %d, %Y") %></td>
+        <%if !book_history.chk_in_date.nil?%>
+        <td><%=book_history.chk_in_date.strftime("%b %d, %Y")%></td>
+        <%else%>
+        <td><%=book_history.chk_in_date%></td>
+        <%end%>
+        <td><%= @user.name %>&nbsp(&nbsp<%=@user.email%>&nbsp)</td>
+        <%end%>
         <% end %>
-      </br>
-      <%= link_to 'Back', :back, :class => "btn btn-warning", :style => "color: #ffffff" %>
+        <%#End of history of a book%>
+        <% end %>
+    </tbody>
+  </table>
+  <br>
+<%else%>
+  <blockquote>
+    <p class="text-danger">You are not authorized to view this page!</p>
+  </blockquote>
+<% end %>
+</br>
+<%= link_to 'Back', :back, :class => "btn btn-warning", :style => "color: #ffffff" %>
