--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -39,7 +39,7 @@
       <%=link_to 'Check out', borrow_book_path(:id => @book.id), :class => "btn btn-success", :style => "color: #ffffff"%>
     <%end%>
     <%if user_signed_in? && current_user.admin? %>
-      <%=link_to 'View Checkout History', check_user_history_path(user_id: current_user.id, book_id: nil), :class => "btn btn-success", :style => "color: #ffffff"%>
+      <%=link_to 'View Checkout History', check_user_history_path(user_id: nil, book_id: @book.id), :class => "btn btn-success", :style => "color: #ffffff"%>
       <%= link_to 'Edit', edit_book_path(@book), :class => "btn btn-warning", :style => "color: #ffffff" %>
       <%if !@book.is_borrowed %>
         <%= link_to 'Delete', @book, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger", :style => "color: #ffffff" %>
